(library
 (name gendarme)
 (public_name gendarme)
 (modules gendarme))

(library
 (name gendarme_json)
 (public_name gendarme-json)
 (modules gendarme_json)
 (libraries gendarme yojson)
 (preprocess (pps ppx_marshal_ext)))

(library
 (name gendarme_toml)
 (public_name gendarme-toml)
 (modules gendarme_toml)
 (libraries gendarme toml)
 (preprocess (pps ppx_marshal_ext)))

(library
 (name gendarme_yaml)
 (public_name gendarme-yaml)
 (modules gendarme_yaml)
 (libraries gendarme yaml)
 (preprocess (pps ppx_marshal_ext)))
